--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,18 @@
+
+
+
 *{
 
     /*border:1px solid red;*/
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 
 }
 
 body{
     font: 1em/1.5 Arial, sans-serif;
-    /*background: linear-gradient(#000 0%,transparent 100%),*/
-            /*#6DB3F2 url("../img/image.jpg") no-repeat ;*/
+    background:url("../img/landing-page-background.jpg") no-repeat fixed;
+background-size: cover;
     /*position: fixed;*/
     /*top: 0;*/
     /*left: 0;*/
@@ -25,21 +29,38 @@ h1 {
 
 .login{
     float:right;
-    border-top:5px solid  #1da1f2;
-    margin-top:15%;
-    margin-right:10%;
-    padding: 20px;
+    border-top:5px solid  #4099FF;
+    margin-top:12%;
+    margin-right:12%;
+    background-color: #fff;
+    padding: 30px;
     box-shadow:1px 1px 5px rgba(0,0,0,0.5);
     -webkit-border-radius:5px;
     -moz-border-radius:5px;
-    border-radius:5px;
+    /*border-radius:5px;*/
 }
 
 .info-text{
 
-float:left;
+    float:left;
+    padding-left: 10%;
+    color: #fff;
+    font: 3rem "Open Sans", sans-serif;
+    font-weight:300;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    margin-top:12%;
 
-    margin-top:15%;
+}
+
+
+.info-text span{
+
+
+    color: #fff;
+    font: 2rem "Open Sans", sans-serif;
+    font-weight:300;
+
+
 }
 
 .group:after{
@@ -59,19 +80,47 @@ a:link{
 
 }
 
+a:visited{
+
+    color:#1da1f2;
+    text-decoration: none;
+
+
+}
+
+
+input{
+
+    -webkit-transition: all 0.30s ease-out;
+    -moz-transition: all 0.30s ease-out;
+    -ms-transition: all 0.30s ease-out;
+    -o-transition: all 0.30s ease-out;
+    transition: all 0.30s ease-out;
+
+}
+
+input[type="text"],
+input[type="password"]{
+    border:1px solid #aab8c2;
+
+
+}
+
+
+
 input[type="text"],
 input[type="password"],
 input[type="submit"]{
 
     margin-bottom: 10px;
     padding :5px;
-    width:300px;
-
+    width:100%;
+    border-radius: 3px;
 
 }
 input:focus {
     padding :5px;
-    box-shadow: 0 0 3px #1da1f2;
+    box-shadow: 0 0 2px #4099FF;
 
 }
 input[type="checkbox"]{
@@ -110,8 +159,6 @@ footer{
 
 
 
-
-
 footer li{
 
     display:inline-block;
@@ -127,13 +174,24 @@ footer li{
 }
 
 @media (max-width: 768px)  {
+    .info-text{
+
+        float: none;
+
+    }
+    .login {
+        float: none;
+        margin:auto;
+        padding: 10px;
+
+    }
 
 
 }
 
 
-
 @media (max-width: 480px)  {
+
 
 }
 
