--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
 
-
-
-*{
+* {
 
     /*border:1px solid red;*/
     box-sizing: border-box;
@@ -9,10 +7,10 @@
 
 }
 
-body{
+body {
     font: 1em/1.5 Arial, sans-serif;
-    background:url("../img/landing-page-background.jpg") no-repeat fixed;
-background-size: cover;
+    background: url("../img/landing-page-background.jpg") no-repeat fixed;
+    background-size: cover;
     /*position: fixed;*/
     /*top: 0;*/
     /*left: 0;*/
@@ -21,75 +19,67 @@ background-size: cover;
     /*width: 100%;*/
     /*height: 100%;*/
 }
+
 h1 {
     line-height: 1.3;
 }
 
-
-
-.login{
-    float:right;
-    border-top:5px solid  #4099FF;
-    margin-top:12%;
-    margin-right:12%;
+.login {
+    float: right;
+    border-top: 5px solid #4099FF;
+    margin-top: 12%;
+    margin-right: 12%;
     background-color: #fff;
     padding: 30px;
-    box-shadow:1px 1px 5px rgba(0,0,0,0.5);
-    -webkit-border-radius:5px;
-    -moz-border-radius:5px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     /*border-radius:5px;*/
 }
 
-.info-text{
+.info-text {
 
-    float:left;
+    float: left;
     padding-left: 10%;
     color: #fff;
     font: 3rem "Open Sans", sans-serif;
-    font-weight:300;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-    margin-top:12%;
+    font-weight: 300;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    margin-top: 12%;
 
 }
 
-
-.info-text span{
-
+.info-text span {
 
     color: #fff;
     font: 2rem "Open Sans", sans-serif;
-    font-weight:300;
-
-
-}
-
-.group:after{
-
-    content:"";
-    display:table;
-    clear:both;
+    font-weight: 300;
 
 }
 
+.group:after {
 
-a:link{
+    content: "";
+    display: table;
+    clear: both;
 
-    color:#1da1f2;
+}
+
+a:link {
+
+    color: #1da1f2;
     text-decoration: none;
 
-
 }
 
-a:visited{
+a:visited {
 
-    color:#1da1f2;
+    color: #1da1f2;
     text-decoration: none;
 
-
 }
 
-
-input{
+input {
 
     -webkit-transition: all 0.30s ease-out;
     -moz-transition: all 0.30s ease-out;
@@ -100,98 +90,90 @@ input{
 }
 
 input[type="text"],
-input[type="password"]{
-    border:1px solid #aab8c2;
-
+input[type="password"] {
+    border: 1px solid #aab8c2;
 
 }
-
-
 
 input[type="text"],
 input[type="password"],
-input[type="submit"]{
+input[type="submit"] {
 
     margin-bottom: 10px;
-    padding :5px;
-    width:100%;
+    padding: 5px;
+    width: 100%;
     border-radius: 3px;
 
 }
+
 input:focus {
-    padding :5px;
+    padding: 5px;
     box-shadow: 0 0 2px #4099FF;
 
 }
-input[type="checkbox"]{
+
+input[type="checkbox"] {
 
     margin-right: 5px;
-    height:0;
+    height: 0;
 }
 
-input[type="submit"]{
+input[type="submit"] {
 
     background-color: #4099FF;
     padding: 8px;
-    color:#fff;
-    border:0;
+    color: #fff;
+    border: 0;
     cursor: pointer;
 }
 
-.right{
+.right {
 
     margin-left: 15px;
 
 }
 
+section {
 
-section{
-
-
-padding-bottom: 15%;
+    padding-bottom: 15%;
 
 }
 
-
-footer{
-
-}
-
-
-
-footer li{
-
-    display:inline-block;
+footer {
 
 }
 
-@media (max-width: 1024px)  {
+footer li {
+
+    display: inline-block;
 
 }
 
-@media (max-width: 960px)  {
+@media (max-width: 1024px) {
 
 }
 
-@media (max-width: 768px)  {
-    .info-text{
+@media (max-width: 960px) {
+
+}
+
+@media (max-width: 768px) {
+    .info-text {
 
         float: none;
 
     }
+
     .login {
         float: none;
-        margin:auto;
+        margin: auto;
         padding: 10px;
 
     }
 
-
 }
 
-
-@media (max-width: 480px)  {
-
+@media (max-width: 480px) {
 
 }
 
