--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,39 @@
-
+/* universal code----------------*/
 * {
-
     /*border:1px solid red;*/
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
 
 }
 
+/* elements -------------------*/
 body {
     font: 1em/1.5 Arial, sans-serif;
     background: url("../img/landing-page-background.jpg") no-repeat fixed;
     background-size: cover;
-    /*position: fixed;*/
-    /*top: 0;*/
-    /*left: 0;*/
-
-    /*!* Preserve aspet ratio *!*/
-    /*width: 100%;*/
-    /*height: 100%;*/
 }
 
 h1 {
     line-height: 1.3;
+    font-family: 'Open Sans', sans-serif;
 }
+
+/* login --------------------*/
 
 .login {
     float: right;
     border-top: 5px solid #4099FF;
     margin-top: 12%;
     margin-right: 12%;
-    background-color: #fff;
+    background-color: #f7f7f7;
     padding: 30px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
+    min-width: 370px;
     /*border-radius:5px;*/
 }
 
+/* caption text -----------*/
 .info-text {
 
     float: left;
@@ -65,19 +62,7 @@ h1 {
 
 }
 
-a:link {
-
-    color: #1da1f2;
-    text-decoration: none;
-
-}
-
-a:visited {
-
-    color: #1da1f2;
-    text-decoration: none;
-
-}
+/* Form ----------------*/
 
 input {
 
@@ -87,6 +72,11 @@ input {
     -o-transition: all 0.30s ease-out;
     transition: all 0.30s ease-out;
 
+}
+
+label {
+
+    font-family: 'Open Sans', sans-serif;
 }
 
 input[type="text"],
@@ -127,27 +117,66 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-.right {
+/* float align -------------------*/
 
-    margin-left: 15px;
+.right {
+    float: right;
 
 }
+
+/* section ----------------*/
 
 section {
 
-    padding-bottom: 15%;
+    padding-bottom: 10%;
 
 }
 
-footer {
+/* a link -----------------*/
 
+a:link {
+
+    color: #1da1f2;
+    text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+
+}
+
+a:visited {
+
+    color: #1da1f2;
+
+}
+
+/* Footer  ---------------*/
+
+footer ul {
+    text-align: center;
 }
 
 footer li {
 
     display: inline-block;
+    padding-right: 10px;
+    color: #cdcdcd;
+    font-size: 0.85rem;
 
 }
+
+footer li a:link {
+    color: #cdcdcd;
+
+}
+
+footer li a:hover {
+    color: #4099FF;
+}
+
+footer li a:visited {
+    color: #cdcdcd;
+}
+
+/* media query ------------*/
 
 @media (max-width: 1024px) {
 
@@ -168,6 +197,12 @@ footer li {
         float: none;
         margin: auto;
         padding: 10px;
+        min-width: 0;
+
+    }
+
+    .info-text {
+        padding-bottom: 30px;
 
     }
 
