--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 /* elements -------------------*/
 body {
     font: 1em/1.5 Arial, sans-serif;
-    background: url("../img/landing-page-background.jpg") no-repeat fixed;
+    background: url("../img/image.jpg") no-repeat fixed;
     background-size: cover;
 }
 
@@ -22,7 +22,7 @@ h1 {
 .login {
     float: right;
     border-top: 5px solid #4099FF;
-    margin-top: 12%;
+    margin-top: 11%;
     margin-right: 12%;
     background-color: #f7f7f7;
     padding: 30px;
@@ -42,7 +42,7 @@ h1 {
     font: 3rem "Open Sans", sans-serif;
     font-weight: 300;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    margin-top: 12%;
+    margin-top: 11%;
 
 }
 
@@ -105,7 +105,6 @@ input:focus {
 input[type="checkbox"] {
 
     margin-right: 5px;
-    height: 0;
 }
 
 input[type="submit"] {
@@ -128,7 +127,7 @@ input[type="submit"] {
 
 section {
 
-    padding-bottom: 10%;
+    padding-bottom: 12.5%;
 
 }
 
@@ -151,16 +150,17 @@ a:visited {
 /* Footer  ---------------*/
 
 footer ul {
-    text-align: center;
+    text-align: right;
+    margin-right: 60px;
 }
 
 footer li {
 
     display: inline-block;
     padding-right: 10px;
+    padding-left: 5px;
     color: #cdcdcd;
     font-size: 0.85rem;
-
 }
 
 footer li a:link {
