--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ label {
 input[type="text"],
 input[type="password"] {
     border: 1px solid #aab8c2;
+    /*border-bottom: 3px solid #aab8c2;*/
 
 }
 
@@ -92,13 +93,16 @@ input[type="submit"] {
     margin-bottom: 10px;
     padding: 5px;
     width: 100%;
-    border-radius: 3px;
+    border-radius: 2px;
 
 }
 
-input:focus {
-    padding: 5px;
-    box-shadow: 0 0 2px #4099FF;
+input[type="text"]:focus,
+input[type="password"]:focus {
+
+    -webkit-box-shadow: 0 2px 0 #4099FF;
+    -moz-box-shadow:  0 2px 0 #4099FF;
+    box-shadow: 0 2px 0 #4099FF;
 
 }
 
