--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* universal code----------------*/
 * {
-    /*border:1px solid red;*/
+    border:1px solid red;
     box-sizing: border-box;
 
 }
@@ -8,8 +8,7 @@
 /* elements -------------------*/
 body {
     font: 1em/1.5 Arial, sans-serif;
-    background: url("../img/image.jpg") no-repeat fixed;
-    background-size: cover;
+    background-color: #F5F8FA;
 }
 
 h1 {
@@ -29,8 +28,9 @@ h1 {
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
+    border-radius:5px;
     min-width: 370px;
-    /*border-radius:5px;*/
+
 }
 
 /* caption text -----------*/
@@ -62,6 +62,37 @@ h1 {
 
 }
 
+/* top bar ---------------*/
+
+.main-bar{
+background-color: #2980b9;
+
+
+}
+
+.sub-bar{
+    background-color: #3498db;
+
+}
+
+
+/* box ------------------*/
+
+.box-model{
+
+    width:50%;
+    margin:5% auto;
+    padding: 30px;
+    background-color: #fff;
+    border: 1px solid #aab8c2;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    border-radius:3px;
+
+}
+
+
+
 /* Form ----------------*/
 
 input {
@@ -80,7 +111,8 @@ label {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+select{
     border: 1px solid #aab8c2;
     /*border-bottom: 3px solid #aab8c2;*/
 
@@ -88,12 +120,18 @@ input[type="password"] {
 
 input[type="text"],
 input[type="password"],
-input[type="submit"] {
+select {
 
     margin-bottom: 10px;
     padding: 5px;
     width: 100%;
     border-radius: 2px;
+
+}
+
+select{
+
+    background-color: #fff;
 
 }
 
@@ -118,6 +156,34 @@ input[type="submit"] {
     color: #fff;
     border: 0;
     cursor: pointer;
+    margin-bottom: 10px;
+    border-radius: 2px;
+}
+
+.btn-wrapper{
+
+    width:100%;
+    /*background-color: red;*/
+    text-align: right;
+
+}
+
+.skip{
+
+
+
+    width:100px;
+    background-color: #fff;
+    color:initial;
+
+
+}
+.next{
+
+    width:100px;
+
+
+
 }
 
 /* float align -------------------*/
@@ -179,6 +245,10 @@ footer li a:hover {
 footer li a:visited {
     color: #cdcdcd;
 }
+
+
+
+
 
 /* media query ------------*/
 
