--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* universal code----------------*/
 * {
-    border:1px solid red;
+    /*border:1px solid red;*/
     box-sizing: border-box;
 
 }
