--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 /* elements -------------------*/
 body {
     font: 1em/1.5 Arial, sans-serif;
-    background-color: #F5F8FA;
+    background-color: #F4F8FB;
 }
 
 h1 {
@@ -23,19 +23,19 @@ h1 {
     border-top: 5px solid #4099FF;
     margin-top: 11%;
     margin-right: 12%;
-    background-color: #f7f7f7;
+    background-color: rgba(255, 255, 255, 0.95);
     padding: 30px;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius:5px;
+    border-radius: 5px;
     min-width: 370px;
+    vertical-align: top;
 
 }
 
 /* caption text -----------*/
 .info-text {
-
     float: left;
     padding-left: 10%;
     color: #fff;
@@ -43,19 +43,18 @@ h1 {
     font-weight: 300;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     margin-top: 11%;
+    vertical-align: top;
 
 }
 
 .info-text span {
-
     color: #fff;
     font: 2rem "Open Sans", sans-serif;
     font-weight: 300;
 
 }
 
-.group:after {
-
+.clearfix:after {
     content: "";
     display: table;
     clear: both;
@@ -64,39 +63,65 @@ h1 {
 
 /* top bar ---------------*/
 
-.main-bar{
-background-color: #2980b9;
-
-
-}
-
-.sub-bar{
-    background-color: #3498db;
+.main-bar {
+    background-color: #2a8bcc;
 
 }
 
+.sub-bar {
+    background-color: #4099FF;
+
+}
 
 /* box ------------------*/
 
-.box-model{
-
-    width:50%;
-    margin:5% auto;
-    padding: 30px;
-    background-color: #fff;
-    border: 1px solid #aab8c2;
-    -webkit-border-radius:3px;
-    -moz-border-radius:3px;
-    border-radius:3px;
+.box-model {
+    width: 45%;
+    margin: 5% auto;
+    padding: 2px 30px 30px 30px;
+    background-color: #fbfbfb;
+    /*border: 1px solid #aab8c2;*/
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    box-shadow: 0 0 225px rgba(255, 255, 255, 0.55);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 
 }
 
+.more {
 
+    width: 48%;
+}
+
+.box-model h1 {
+    font: 2rem "Open Sans", sans-serif;
+    font-weight: 400;
+
+}
 
 /* Form ----------------*/
 
 input {
 
+}
+
+label {
+    font-family: 'Open Sans', sans-serif;
+}
+
+input[type="text"],
+input[type="password"],
+select,
+.fileContainer {
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 18px;
+    width: 100%;
+    border-radius: 3px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    border: 1px solid #e1e8ed;
     -webkit-transition: all 0.30s ease-out;
     -moz-transition: all 0.30s ease-out;
     -ms-transition: all 0.30s ease-out;
@@ -105,33 +130,31 @@ input {
 
 }
 
-label {
-
-    font-family: 'Open Sans', sans-serif;
+.fileContainer {
+    overflow: hidden;
+    position: relative;
+    /*background: #f0f0f0;*/
+    /*color:#fff;*/
+    padding: 5px 20px;
+    cursor: pointer;
 }
 
-input[type="text"],
-input[type="password"],
-select{
-    border: 1px solid #aab8c2;
-    /*border-bottom: 3px solid #aab8c2;*/
-
+.fileContainer [type="file"] { /* hide default input type file  reference  http://jsfiddle.net/barney/uxPjN/*/
+    cursor: inherit;
+    display: block;
+    filter: alpha(opacity=0);
+    min-height: 0;
+    min-width: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
 }
 
-input[type="text"],
-input[type="password"],
-select {
-
-    margin-bottom: 10px;
-    padding: 5px;
-    width: 100%;
-    border-radius: 2px;
-
-}
-
-select{
-
+select, option {
     background-color: #fff;
+    outline: none;
 
 }
 
@@ -139,7 +162,7 @@ input[type="text"]:focus,
 input[type="password"]:focus {
 
     -webkit-box-shadow: 0 2px 0 #4099FF;
-    -moz-box-shadow:  0 2px 0 #4099FF;
+    -moz-box-shadow: 0 2px 0 #4099FF;
     box-shadow: 0 2px 0 #4099FF;
 
 }
@@ -149,43 +172,103 @@ input[type="checkbox"] {
     margin-right: 5px;
 }
 
+/* Button -----------*/
 
+.btn {
+    font: 1rem "Open Sans", sans-serif;
+    font-weight: 400;
+    color: initial;
+    padding: 5px;
+    border: 0;
+    cursor: pointer;
+    border-radius: 2px;
+    outline: none;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 
-.btn-wrapper{
+}
 
-    width:100%;
+.default {
+
+    background-color: #f0f0f0;
+    text-shadow: none;
+}
+
+.blue {
+
+    color: #fff;
+    background: #4099FF;
+    border: 0;
+    border-bottom: 2px solid #2a8bcc;
+    -webkit-box-shadow: inset 0 -2px #2a8bcc;
+    box-shadow: 0 1px #2a8bcc;
+
+}
+
+.small {
+
+    width: 100px;
+
+}
+
+.medium {
+
+}
+
+.large {
+
+}
+
+.full {
+    width: 100%;
+
+}
+
+.btn-wrapper {
+
+    width: 100%;
     /*background-color: red;*/
     text-align: right;
-    padding-top:25px;
+    padding-top: 25px;
 
 }
 
-.skip{
+/* image -------------------*/
 
-
-
-    width:100px;
-    background-color: #fff;
-    color:initial;
-    padding: 5px;
-    border: 0;
-    cursor: pointer;
-    margin-bottom: 10px;
-    border-radius: 2px;
-
+.profile {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    border: 5px solid #f0f0f0;
+    text-align: center;
+    overflow: hidden;
 
 }
-.next{
-    background-color: #4099FF;
-    color:#fff;
-    width:100px;
-    padding: 5px;
-    border: 0;
-    cursor: pointer;
-    margin-bottom: 10px;
-    border-radius: 2px;
 
+.profile img {
 
+}
+
+/* wrraper-profile-------------------*/
+
+.wrraper-profile {
+
+    display: inline-block;
+    width: 50%;
+    margin-left: -4px;
+    vertical-align: middle;
+
+}
+
+.pic {
+
+    border-right: 1px solid #f0f0f0;
+
+}
+
+.upload {
+    text-align: center;
+    /*vertical-align: middle;*/
 
 }
 
@@ -200,7 +283,8 @@ input[type="checkbox"] {
 
 section {
 
-    padding-bottom: 12.5%;
+    min-height: calc(100vh - 180px);
+    /*border:1px solid red;*/
 
 }
 
@@ -210,7 +294,13 @@ a:link {
 
     color: #1da1f2;
     text-decoration: none;
+    outline: none;
     font-family: 'Open Sans', sans-serif;
+    -webkit-transition: all 0.30s ease-out;
+    -moz-transition: all 0.30s ease-out;
+    -ms-transition: all 0.30s ease-out;
+    -o-transition: all 0.30s ease-out;
+    transition: all 0.30s ease-out;
 
 }
 
@@ -249,10 +339,6 @@ footer li a:visited {
     color: #cdcdcd;
 }
 
-
-
-
-
 /* media query ------------*/
 
 @media (max-width: 1024px) {
@@ -260,6 +346,21 @@ footer li a:visited {
 }
 
 @media (max-width: 960px) {
+
+    .info-text {
+
+        padding-left: 4%;
+    }
+
+    .login {
+
+        margin-right: 4%;
+    }
+
+    .box-model {
+
+        width: 70%;
+    }
 
 }
 
@@ -283,12 +384,78 @@ footer li a:visited {
 
     }
 
+    footer ul {
+        text-align: center;
+        margin: auto;
+    }
+
+    .box-model {
+
+        width: 90%;
+    }
+
+    .btn {
+
+        width: 100%;
+        margin-bottom: 10px;
+
+    }
+
+    .wrraper-profile {
+
+        display: block;
+        width: 100%;
+
+    }
+
+    .pic {
+
+        border: none;
+        padding-bottom: 10px;
+
+    }
+
+    .profile {
+
+        display: block;
+        margin: 0 auto;
+    }
+
 }
 
 @media (max-width: 480px) {
     .login {
         padding: 5px;
     }
+
+    .box-model {
+
+        width: 100%;
+        padding: 5px;
+
+    }
+
+    .btn {
+
+        width: 100%;
+        margin-bottom: 10px;
+
+    }
+
+    .wrraper-profile {
+
+        display: block;
+        width: 100%;
+
+    }
+
+    .pic {
+
+        border: none;
+        padding-bottom: 10px;
+
+    }
+
 }
 
 
